Some tiny changes on report_template.html.

--- a/aws_resource_keeper/report_template.html
+++ b/aws_resource_keeper/report_template.html
@@ -3,9 +3,19 @@
 <head>
     <style>
         h1 {
-            text-shadow: 0px 1px 1px #4d4d4d;
-            color: #222;
-            font: 32px 'mono';
+            text-shadow: 0px 1px 1px #505050;
+            color: #ff0000;
+            font: 22px 'mono';
+        }
+
+        h2 {
+            color: #000000;
+            font: 16px 'mono';
+        }
+
+        h3 {
+            color: #505050;
+            font: 12px 'mono';
         }
 
         table,
@@ -21,22 +31,23 @@
         th,
         td {
             padding: .2em .8em;
-            border: 1px solid #fff;
+            border: 1px solid #ffffff;
         }
 
         caption {
-            background: #dbb768;
+            background: #f8d17e;
             font-weight: bold;
             font-size: 1.1em;
         }
 
         th {
             font-weight: bold;
-            background: #f3ce7d;
+            background: #eeca7c;
+            text-align: left;
         }
 
         td {
-            background: #ffea97;
+            background: #ffeb9b;
         }
     </style>
 </head>
